# PyFreeFOAM

./: CMakeLists.txt  importfiniteVolume.output  importfoam.output
Foam/src/: CMakeLists.txt  common.hh  common.hxx  commonhh.list  commonhxx.list  iterators.i
Foam/src/OpenFOAM/: CMakeLists.txt  dimensionSet.i  dimensionSets.i
Foam/src/OpenFOAM/algorithms/: CMakeLists.txt
Foam/src/OpenFOAM/algorithms/subCycle/: subCycle.i  subCycle_volScalarField.i
Foam/src/OpenFOAM/containers/: CMakeLists.txt
Foam/src/OpenFOAM/containers/HashTables/: CMakeLists.txt
Foam/src/OpenFOAM/containers/LinkedLists/: CMakeLists.txt
Foam/src/OpenFOAM/containers/Lists/: CMakeLists.txt
Foam/src/OpenFOAM/containers/NamedEnum/: NamedEnum.i
Foam/src/OpenFOAM/db/: CMakeLists.txt  IOdictionary.i  IOobject.i  IOobjectList.i  Switch.i  objectRegistry.i  regIOobject.i
Foam/src/OpenFOAM/db/IOstreams/: CMakeLists.txt  ITstream.i  token.i
Foam/src/OpenFOAM/db/Time/: Time.i  TimePaths.i  TimeState.i  clock.i  cpuTime.i  subCycleTime.i
Foam/src/OpenFOAM/db/dictionary/: CMakeLists.txt  dictionary.hh  dictionary.i  entry.i
Foam/src/OpenFOAM/db/error/: messageStream.i
Foam/src/OpenFOAM/db/typeInfo/: CMakeLists.txt
Foam/src/OpenFOAM/dimensionedTypes/: dimensionedScalar.i  dimensionedSymmTensor.i  dimensionedTensor.i  dimensionedType.i  dimensionedTypes.i  dimensionedVector.i
Foam/src/OpenFOAM/fields/: CMakeLists.txt
Foam/src/OpenFOAM/fields/DimensionedFields/: DimensionedField.cpp  DimensionedField_scalar_fvMesh.cpp  DimensionedField_scalar_surfaceMesh.cpp  DimensionedField_scalar_volMesh.cpp  DimensionedField_sphericalTensor_surfaceMesh.cpp  DimensionedField_sphericalTensor_volMesh.cpp  DimensionedField_symmTensor_volMesh.cpp  DimensionedField_tensor_surfaceMesh.cpp  DimensionedField_tensor_volMesh.cpp  DimensionedField_vector_surfaceMesh.cpp  DimensionedField_vector_volMesh.cpp
Foam/src/OpenFOAM/fields/FieldFields/: FieldField.cpp  FieldField_fvPatchField_sphericalTensor.cpp  FieldField_fvPatchField_symmTensor.cpp  FieldField_fvPatchField_tensor.cpp  oneFieldField.i
Foam/src/OpenFOAM/fields/Fields/: Field.cpp  FieldMapper.i  complexFields.i  fieldTypes.i  oneField.i  primitiveFields.i  primitiveFieldsFwd.i  scalarField.cpp  sphericalTensorField.cpp  symmTensorField.cpp  tensorField.cpp  vectorField.cpp
Foam/src/OpenFOAM/fields/GeometricFields/: GeometricField.cpp  GeometricField_scalar_fvPatchField_volMesh.cpp  GeometricField_scalar_fvsPatchField_surfaceMesh.cpp  GeometricField_sphericalTensor_fvPatchField_volMesh.cpp  GeometricField_symmTensor_fvPatchField_volMesh.cpp  GeometricField_tensor_fvPatchField_volMesh.cpp  GeometricField_tensor_fvsPatchField_surfaceMesh.cpp  GeometricField_vector_fvPatchField_volMesh.cpp  GeometricField_vector_fvsPatchField_surfaceMesh.cpp  TGeometricBoundaryField.hpp  geometricOneField.i  no_tmp_typemap_GeometricFields.hpp
Foam/src/OpenFOAM/fields/UniformDimensionedFields/: UniformDimensionedField.i  UniformDimensionedVectorField.i
Foam/src/OpenFOAM/fields/tmp/: autoPtr.i  autoPtr_IOdictionary.i  autoPtr_UniformDimensionedVectorField.i  autoPtr_basicPsiThermo.i  autoPtr_basicRhoThermo.i  autoPtr_basicThermo.i  autoPtr_compressible_RASModel.i  autoPtr_compressible_turbulenceModel.i  autoPtr_dynamicFvMesh.i  autoPtr_fvMesh.i  autoPtr_fvPatchField_scalar.cpp  autoPtr_fvPatchField_vector.cpp  autoPtr_incompressible_LESModel.i  autoPtr_incompressible_RASModel.i  autoPtr_incompressible_turbulenceModel.i  autoPtr_motionSolver.i  autoPtr_polyPatch.i  autoPtr_radiationModel.i  autoPtr_scalarField.i  autoPtr_sphericalTensorField.i  autoPtr_surfaceScalarField.cpp  autoPtr_surfaceTensorField.cpp  autoPtr_surfaceVectorField.cpp  autoPtr_symmTensorField.i  autoPtr_tensorField.i  autoPtr_vectorField.i  autoPtr_volScalarField.cpp  autoPtr_volTensorField.cpp  (+31 more)
Foam/src/OpenFOAM/global/: argList.i
Foam/src/OpenFOAM/graph/: curve.i  graph.i
Foam/src/OpenFOAM/matrices/: CMakeLists.txt  ext_solution.i  solution.i
Foam/src/OpenFOAM/memory/: CMakeLists.txt  Xfer_cellList.i  Xfer_faceList.i  Xfer_pointField.i
Foam/src/OpenFOAM/meshes/: CMakeLists.txt  GeoMesh.hxx  lduMesh.i  patchIdentifier.i
Foam/src/OpenFOAM/primitives/: CMakeLists.txt  Random.i  S_phericalTensor.i  S_ymmTensor.i  bool.i  complex.i  complexVector.i  contiguous.i  direction.i  int_.i  label.i  one.hh  one.i  pTraits.i  pTraits_symmTensor.i  pTraits_vector.i  scalar.i  sphericalTensor.i  symmTensor.i  tensor.i  uLabel.i  uint.i  ulong.i  vector.i
Foam/src/dynamicFvMesh/: dynamicFvMesh.cpp
Foam/src/dynamicMesh/: motionSolver.cpp
Foam/src/finiteVolume/: CMakeLists.txt  volMesh.hpp
Foam/src/finiteVolume/cfdTools/: CMakeLists.txt
Foam/src/finiteVolume/fields/: CMakeLists.txt
Foam/src/finiteVolume/finiteVolume/: CMakeLists.txt  fvSchemes.i  fvSolution.i
Foam/src/finiteVolume/fvMatrices/: CMakeLists.txt  fvMatrices.i  fvMatricesFwd.hpp  fvMatrix.cpp  fvScalarMatrix.cpp  fvVectorMatrix.cpp
Foam/src/finiteVolume/fvMesh/: CMakeLists.txt  fvMesh.hpp  fvMeshes.i
Foam/src/finiteVolume/interpolation/: CMakeLists.txt
Foam/src/meshTools/: CMakeLists.txt
Foam/src/meshTools/coordinateSystems/: CMakeLists.txt  coordinateSystem.i  coordinateSystems.i
Foam/src/meshTools/directMapped/: CMakeLists.txt
Foam/src/randomProcesses/: CMakeLists.txt
Foam/src/randomProcesses/Kmesh/: Kmesh.i
Foam/src/randomProcesses/fft/: calcEk.i  fft.i
Foam/src/randomProcesses/processes/: UOprocess.i
Foam/src/sampling/: CMakeLists.txt
Foam/src/sampling/graphField/: makeGraph.i
Foam/src/sampling/meshToMeshInterpolation/: meshToMesh.i
Foam/src/thermophysicalModels/basic/: basicThermo.cpp
Foam/src/transportModels/: CMakeLists.txt
Foam/src/transportModels/incompressible/: CMakeLists.txt  singlePhaseTransportModel.i  transportModel.i  twoPhaseMixture.i
Foam/src/transportModels/interfaceProperties/: interfaceProperties.i
Foam/src/turbulenceModels/: CMakeLists.txt
Foam/src/turbulenceModels/compressible/: CMakeLists.txt  turbulenceModel.cpp
Foam/src/turbulenceModels/incompressible/: turbulenceModel.cpp
(+297 files in other folders)
